# FastSfmlLib

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Readme.md  Readme.md~  stP1kAlM
include/: FastSfml.hpp  FastSfml.hpp~  Text.hpp  UI.hpp  UI.hpp~  mylibrary.h
src/: PhysicsObject.cpp  cMouse.cpp  cMouse.cpp~  cPhysicsWorld.cpp  cSlider.cpp  cSwitch.cpp  mylibrary.cpp  сButton.cpp  сInputText.cpp  сInputText.cpp~
src/PhysicsWorld/: PhysicsObject.cpp  cPhysicsWorld.cpp
src/Text/: сInputText.cpp  сInputText.cpp~
src/UI/: cButton.cpp  cButton.cpp~  cInterfaseUI.cpp  cInterfaseUI.cpp~  cSlider.cpp  cSlider.cpp~  cSwitch.cpp  сButton.cpp~  сSwitch.cpp  сSwitch.cpp~
